<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Midnight Order</string>
    <string name="home_text">Home</string>
    <string name="plate_text">Plate</string>
    <string name="profile_text">Profile</string>
    <string name="forgot_text"><u>Forgot Password?</u></string>
    <string name="account_text">Dont have an account?</string>
    <string name="name_text">Name</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="login_text">LOGIN</string>
    <string name="register_text"><u>Register</u></string>
    <string name="logout_text">Log Out</string>
    <string name="exit_text">Exit</string>

</resources>
