<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.test.ctn.Register">

    <EditText
        android:id="@+id/name"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@drawable/input_layout"
        android:cursorVisible="false"
        android:hint="@string/name_text"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLines="1"
        android:paddingLeft="40dp"
        android:paddingRight="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/colorGray"
        android:textCursorDrawable="@color/black"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_layout"
        android:cursorVisible="true"
        android:hint="@string/username_text"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLines="1"
        android:paddingLeft="40dp"
        android:paddingRight="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/colorGray"
        android:textCursorDrawable="@color/black"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_layout"
        android:cursorVisible="true"
        android:hint="@string/password_text"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingLeft="40dp"
        android:paddingRight="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/colorGray"
        android:textCursorDrawable="@color/black"
        android:textSize="20dp" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_layout"
        android:text="@string/register_text"
        android:textColor="@color/colorCyan"
        android:textSize="20dp" />

</RelativeLayout>